kubernetes/apps/media/tautulli/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  ports:
    - name: http
      port: 8181
      targetPort: 8181
      protocol: TCP
